tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__FluixCrystals-AAAAAAAAAAAAAAAAAAAAtQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 181,
  "prerequisites": [
    1290
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Not \"flux\"! Even if the color is the same. You need to add redstone and nether quartz to a charged certus crystal.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fluix Crystals",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1290
  ],
  "rewards": [],
  "tasks": []
}
