tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__GetYourPrioritie-Hbq2zJcoQbWK20-2A-kI1Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 10892027944506034389,
  "prerequisites": [
    1303
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You might find yourself setting up complicated systems involving many storage buses with differing priorities. To make it less tedious, grab a priority card!\n\nThis tool allows you to set many buses to the same priority with a single click... but better yet, it also features §nincrement and decrement modes!§r Every time you click on a bus, the priority will be set to one higher/lower than the previous bus you clicked, so setting up large arrays of descending priorities is a breeze.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Get Your Priorities Straight",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1303
  ],
  "rewards": [],
  "tasks": []
}
