tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__GoingSuperlumina-kBjBqQR5Q-GWh4olyHmXXg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 322363485343815518,
  "prerequisites": [
    8197199677670127743
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Superluminal Acceleration card is the fastest AE card that you can use to transfer items or fluids.\n\n[note]Superluminal Acceleration cards can only be placed in:[/note]\n\n§cME IO Port (3)§r\n\nIn an IO Port, the Superluminal Acceleration Card will transfer items at a rate of:\n\n§61x Cards: 33,554,432 items/tick\n2x Cards: 2,147,483,648 items/tick\n3x Cards: 137,438,953,472 items/tick\n\n§rIn an IO Port, the Superluminal Acceleration Card will transfer fluids at a rate of:\n\n§61x Cards: 33,554,432,000 mb/tick\n2x Cards: 2,147,483,648,000 mb/tick\n3x Cards: 137,438,953,472,000 mb/tick\n\n",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Going Superluminal",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    8197199677670127743
  ],
  "rewards": [],
  "tasks": []
}
